--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Home work 7</title>
+    <title>Home work 8</title>
     <link rel="stylesheet" href="./css/portfolio.min.css" />
   </head>
   <body>
@@ -20,16 +20,9 @@
             aria-expanded="false"
             data-menu-button
           >
-            <input type="checkbox" id="burger" />
-            <label for="burger">
-              <span class="bar"></span>
-            </label>
+            <span class="bar"></span>
           </button>
-          <div
-            class="mobile-menu-container is-open"
-            id="menu-container"
-            data-menu
-          >
+          <div class="mobile-menu-container" id="menu-container" data-menu>
             <ul class="header-menu">
               <li class="header-menu-item">
                 <a href="index.html" class="header-menu-link">Студия</a>
@@ -70,24 +63,27 @@
           </div>
         </nav>
       </div>
-      <!-- <div class="container header-container">
+
+      <div class="container header-container">
         <nav class="flexbox align-items-center navigation">
           <a href="./" class="logo header-logo">
             Web<span class="logo-black">Studio</span>
           </a>
-          <ul class="list flexbox header-menu">
+          <ul class="header-menu">
             <li class="header-menu-item">
-              <a href="index.html" class="header-menu-link active">Студия</a>
+              <a href="index.html" class="header-menu-link">Студия</a>
             </li>
             <li class="header-menu-item">
-              <a href="portfolio.html" class="header-menu-link">Портфолио</a>
+              <a href="portfolio.html" class="header-menu-link active"
+                >Портфолио</a
+              >
             </li>
             <li class="header-menu-item">
               <a href="#" class="header-menu-link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul class="list flexbox header-contact-list">
+        <ul class="header-contact-list">
           <li class="header-contact-item">
             <a
               href="mailto:info@devstudio.com"
@@ -111,8 +107,9 @@
             </a>
           </li>
         </ul>
-      </div> -->
+      </div>
     </header>
+
     <main>
       <section class="section portfolio">
         <div class="container">
