--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
             aria-expanded="false"
             data-menu-button
           >
-            <input type="checkbox" id="burger" />
-            <label for="burger">
-              <span class="bar"></span>
-            </label>
+            <span class="bar"></span>
           </button>
           <div class="mobile-menu-container" id="menu-container" data-menu>
             <ul class="header-menu">
@@ -63,12 +60,13 @@
           </div>
         </nav>
       </div>
-      <!-- <div class="container header-container">
+
+      <div class="container header-container">
         <nav class="flexbox align-items-center navigation">
           <a href="./" class="logo header-logo">
             Web<span class="logo-black">Studio</span>
           </a>
-          <ul class="list flexbox header-menu">
+          <ul class="header-menu">
             <li class="header-menu-item">
               <a href="index.html" class="header-menu-link active">Студия</a>
             </li>
@@ -80,7 +78,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="list flexbox header-contact-list">
+        <ul class="header-contact-list">
           <li class="header-contact-item">
             <a
               href="mailto:info@devstudio.com"
@@ -104,7 +102,7 @@
             </a>
           </li>
         </ul>
-      </div> -->
+      </div>
     </header>
 
     <main>
