--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="container mobile-menu">
         <nav class="navigation">
-          <a href="./" class="logo header-logo"
+          <a href="index.html" class="logo header-logo"
             >Web<span class="logo-black">Studio</span></a
           >
           <button
@@ -66,7 +66,7 @@
 
       <div class="container header-container">
         <nav class="flexbox align-items-center navigation">
-          <a href="./" class="logo header-logo">
+          <a href="index.html" class="logo header-logo">
             Web<span class="logo-black">Studio</span>
           </a>
           <ul class="header-menu">
@@ -555,7 +555,7 @@
     <footer class="footer">
       <div class="container footer-list">
         <div class="footer-info">
-          <a href="./" class="logo footer-logo">
+          <a href="index.html" class="logo footer-logo">
             Web<span class="logo-white">Studio</span>
           </a>
           <address>
