--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
       <div class="container mobile-menu">
         <nav class="navigation">
-          <a href="./" class="logo header-logo"
+          <a href="index.html" class="logo header-logo"
             >Web<span class="logo-black">Studio</span></a
           >
           <button
@@ -63,7 +63,7 @@
 
       <div class="container header-container">
         <nav class="flexbox align-items-center navigation">
-          <a href="./" class="logo header-logo">
+          <a href="index.html" class="logo header-logo">
             Web<span class="logo-black">Studio</span>
           </a>
           <ul class="header-menu">
@@ -154,33 +154,57 @@
       <section class="section examples">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul class="list flexbox examples-list">
-            <li class="four-columns examples-item">
-              <img
-                src="./images/main/examples/examples-1.jpg"
-                alt="Десктопные приложения"
-                width="370"
-              />
+          <ul class="examples-list">
+            <li class="examples-item">
+              <picture>
+                <source
+                  srcset="
+                    ./images/main/desktop/examples1.jpg    1x,
+                    ./images/main/desktop/examples1@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <img
+                  src="./images/main/desktop/examples1.jpg"
+                  alt="Десктопные приложения"
+                />
+              </picture>
               <div class="examples-description">
                 <h3 class="item-title">Десктопные приложения</h3>
               </div>
             </li>
-            <li class="four-columns examples-item">
-              <img
-                src="./images/main/examples/examples-2.jpg"
-                alt="Мобильные приложения"
-                width="370"
-              />
+            <li class="examples-item">
+              <picture>
+                <source
+                  srcset="
+                    ./images/main/desktop/examples2.jpg    1x,
+                    ./images/main/desktop/examples2@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <img
+                  src="./images/main/desktop/examples2.jpg"
+                  alt="Мобильные приложения"
+                />
+              </picture>
               <div class="examples-description">
                 <h3 class="item-title">Мобильные приложения</h3>
               </div>
             </li>
-            <li class="four-columns examples-item">
-              <img
-                src="./images/main/examples/examples-3.jpg"
-                alt="Дизайнерские решения"
-                width="370"
-              />
+            <li class="examples-item">
+              <picture>
+                <source
+                  srcset="
+                    ./images/main/desktop/examples3.jpg    1x,
+                    ./images/main/desktop/examples3@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <img
+                  src="./images/main/desktop/examples3.jpg"
+                  alt="Дизайнерские решения"
+                />
+              </picture>
               <div class="examples-description">
                 <h3 class="item-title">Дизайнерские решения</h3>
               </div>
@@ -638,7 +662,7 @@
     <footer class="footer">
       <div class="container footer-list">
         <div class="footer-info">
-          <a href="./" class="logo footer-logo">
+          <a href="index.html" class="logo footer-logo">
             Web<span class="logo-white">Studio</span>
           </a>
           <address>
